# insitu-police-ads-

./: .env.example  .gitignore  App.tsx  CLAUDE.md  CREDENTIAL_ROTATION_POLICY.md  GEMINI.md  README.md  audit.cjs  audit.js  check_cors.cjs  constants.ts  declarations.d.ts  find_region.js  fix_cors.cjs  fix_imports.js  fix_security.js  generate-sitemap.js  get_users.cjs  index.css  index.html  index.tsx  insert_admin.js  metadata.json  netlify.toml  package-lock.json  package.json  patch.js  patch_fallback.js  run_audit.cjs  sanitize_db.cjs  stitch-ads-optimizer.html  stitch-adv-command.html  stitch-competitor-tracker.html  stitch-home.html  stitch-image-audit.html  stitch-pro-command.html  stitch-video-audit.html  tailwind.config.js  testTraffic.ts  test_db.js  (+11 more)
.agent/: MEJORAS_ANALISIS_SEO.md
.claude/: settings.json
.trunk/: trunk.yaml
components/: AIDebugView.tsx  AccessGuard.tsx  AdFatigueDetector.tsx  AdminDashboard.tsx  AdminNotifyComposer.tsx  AdminReleaseManager.tsx  AdsInsightsPanel.tsx  AdsOptimizerView.tsx  AnalyticsProvider.tsx  AnimateLabView.tsx  AudioLabView.tsx  AuthGate.tsx  AutomationRulesView.tsx  BlogManager.tsx  BlogPostEditor.tsx  BlogView.tsx  BrandGuardianView.tsx  BrandIdentity.tsx  BudgetSimulator.tsx  CampaignsView.tsx  CheckoutFlow.tsx  CommandCenterHome.tsx  CompareCreativesView.tsx  CompetitorChart.tsx  ConsultingModal.tsx  ContactPage.tsx  CookieBanner.tsx  ExpertAgent.tsx  (+57 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_security.rs  lib.rs  llm_router.rs  ollama_manager.rs  web_scraper.rs
(+316 files in other folders)
