[package]
name = "app"
version = "1.0.0"
description = "INsitu AI Desktop - Multi-channel ads auditing and optimization"
authors = ["Franklin Sanchez"]
license = "Proprietary"
repository = "https://github.com/quiciopuerta/INsitu-AI-2"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.27.0"
urlencoding = "2.1.3"
tauri-plugin-shell = "2.3.5"
